# bookllm

./: README.md  claude.md  docker-compose.yml  simple_test.py  system_health_check.py  test_ai_service.py  test_api.py  test_frontend_request.html
ai-service/: README.md  pyproject.toml
ai-service/app/: main.py
ai-service/app/api/: recommendations.py  reviews.py
ai-service/app/core/: config.py
ai-service/app/models/: schemas.py
ai-service/app/services/: openai_service.py
backend/: build.gradle  settings.gradle
backend/src/main/java/com/bookllm/: BookllmApplication.java
backend/src/main/java/com/bookllm/api/: BookController.java  ReviewController.java
backend/src/main/java/com/bookllm/domain/book/dto/: BookResponse.java  CreateBookRequest.java
backend/src/main/java/com/bookllm/global/config/: CorsConfig.java  SecurityConfig.java  WebConfig.java
backend/src/main/java/com/bookllm/global/exception/: BusinessException.java  ErrorCode.java
backend/src/main/java/com/bookllm/infrastructure/ai/: AiServiceClient.java
backend/src/main/resources/: application-test.yml
backend/src/main/resources/db/migration/: V3__add_ai_recommendations.sql
docs/: architecture.md  test_summary.md
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/e2e/: api-integration.spec.ts  review-creation-simple.spec.ts  review-creation.spec.ts  review-flow.spec.ts
frontend/playwright-report/: index.html
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/pages/: CreateReviewPage.tsx  HomePage.tsx  ReviewDetailPage.tsx  ReviewListPage.tsx
(+19 files in other folders)
